[gd_scene load_steps=7 format=2]

[ext_resource path="res://Starmap/Starmap.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/SpaceGrotesk-Bold_16px.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/SpaceGrotesk-Normal_16px.tres" type="DynamicFont" id=3]
[ext_resource path="res://Main/StarMapContainer.gd" type="Script" id=4]
[ext_resource path="res://Player/Player.gd" type="Script" id=5]
[ext_resource path="res://Main/__GAME__.gd" type="Script" id=6]

[node name="__GAME__" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 940.0
margin_bottom = 492.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarMapContainer" type="Container" parent="MainUI/HBoxContainer"]
margin_right = 410.0
margin_bottom = 472.0
rect_min_size = Vector2( 410, 410 )
script = ExtResource( 4 )

[node name="Starmap" parent="MainUI/HBoxContainer/StarMapContainer" instance=ExtResource( 1 )]

[node name="TextLeft" type="ColorRect" parent="MainUI/HBoxContainer"]
margin_left = 420.0
margin_right = 665.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="MainUI/HBoxContainer/TextLeft"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MainUI/HBoxContainer/TextLeft/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 235.0
margin_bottom = 462.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
text = "Text test Text test Text test Text test Text test Text test Text test Text test Text test Text test Text test Text test Text test Text test "
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextRight" type="ColorRect" parent="MainUI/HBoxContainer"]
margin_left = 675.0
margin_right = 920.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="MainUI/HBoxContainer/TextRight"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MainUI/HBoxContainer/TextRight/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 235.0
margin_bottom = 462.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
text = "Anderer Labertext Anderer Labertext Anderer Labertext Anderer Labertext Anderer Labertext Anderer Labertext"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 5 )
